# interviewer-ai

./: README.md  env_template.txt  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_basic.py
interviewerai/: config.py  main.py  models.py
interviewerai/interview/: __init__.py  interviewer.py
interviewerai/transcribe/: __init__.py  transcriber.py
